tests/cases/operators/ok/bitwise.ari
fn main() -> i64 {
  let mixed = ((12 & 10) | 1) ^ 3;
  let shifted = (mixed << 2) >> 1;
  return shifted % 9;
}
