tests/cases/operators/errors/operator-null-coalescing-non-enum.ari
fn main() -> i64 {
  let value = 1 ?? 2;
  return value;
}
